gsm-sip-bridge/src/supervise/snapshots/gsm_sip_bridge__supervise__render__tests__strongswan_conf_line_0.snap
---
source: gsm-sip-bridge/src/supervise/render.rs
assertion_line: 137
expression: "render_strongswan_conf(0, \"/var/run/charon-0.vici\", \"/tmp/charon-0.log\")"
---
charon {
    plugins {
        include /etc/strongswan.d/charon/*.conf
        vici {
            socket = unix:///var/run/charon-0.vici
        }
    }
    filelog {
        line0 {
            path = /tmp/charon-0.log
            default = 1
            ike = 1
            cfg = 1
            append = no
            flush_line = yes
            ike_name = yes
            time_format = %Y-%m-%d %H:%M:%S
        }
    }
}
swanctl {
    socket = unix:///var/run/charon-0.vici
}
include /etc/strongswan.d/charon-extra.conf
