gsm-sip-bridge/src/supervise/snapshots/gsm_sip_bridge__supervise__render__tests__strongswan_conf_shared.snap
---
source: gsm-sip-bridge/src/supervise/render.rs
assertion_line: 180
expression: "render_strongswan_conf(\"/var/run/charon.vici\", \"/tmp/charon.log\")"
---
charon {
    plugins {
        include /etc/strongswan.d/charon/*.conf
        vici {
            socket = unix:///var/run/charon.vici
        }
    }
    filelog {
        shared {
            path = /tmp/charon.log
            default = 1
            ike = 1
            cfg = 1
            append = no
            flush_line = yes
            ike_name = yes
            time_format = %Y-%m-%d %H:%M:%S
        }
    }
}
swanctl {
    socket = unix:///var/run/charon.vici
}
include /etc/strongswan.d/charon-extra.conf
