gsm-sip-bridge/src/supervise/snapshots/gsm_sip_bridge__supervise__render__tests__swanctl_epdg_with_src_addr_keeps_the_local_addrs_line.snap
---
source: gsm-sip-bridge/src/supervise/render.rs
assertion_line: 279
expression: rendered
---
connections {
    ims0 {
        local_addrs = 192.168.1.50
        remote_addrs = 10.1.2.3
        local {
            auth = eap-aka
            id = 0404101234567890@realm.mnc10.mcc404.3gppnetwork.org
        }
        remote {
            id = ims
        }
        children {
            ims0 {
                if_id_in = 23
                if_id_out = 23
                updown = /etc/strongswan.d/ims-updown-0.sh
            }
        }
    }
}
