gsm-sip-bridge/src/supervise/snapshots/gsm_sip_bridge__supervise__render__tests__swanctl_epdg_without_src_addr_omits_the_local_addrs_line_entirely.snap
---
source: gsm-sip-bridge/src/supervise/render.rs
assertion_line: 219
expression: rendered
---
connections {
    ims {
        remote_addrs = 10.1.2.3
        local {
            auth = eap-aka
            id = 0404101234567890@realm.mnc10.mcc404.3gppnetwork.org
        }
        children {
            ims {
                if_id_in = 23
                if_id_out = 23
                updown = /etc/strongswan.d/ims-updown-0.sh
            }
        }
    }
}
