gsm-sip-bridge/src/supervise/snapshots/gsm_sip_bridge__supervise__render__tests__swanctl_top_conf_points_at_the_shared_conf_dir.snap
---
source: gsm-sip-bridge/src/supervise/render.rs
assertion_line: 210
expression: "render_swanctl_top_conf(\"/etc/swanctl/conf.d\")"
---
include /etc/swanctl/conf.d/*.conf
