gsm-sip-bridge/src/supervise/snapshots/gsm_sip_bridge__supervise__render__tests__updown_line0.snap
---
source: gsm-sip-bridge/src/supervise/render.rs
assertion_line: 228
expression: line0
---
#!/bin/sh
NETNS="ims" STRONGSWAN_TUN_IFACE="tun23" exec /etc/strongswan.d/ims.updown "$@"
