gsm-sip-bridge/src/supervise/snapshots/gsm_sip_bridge__supervise__render__tests__updown_line1.snap
---
source: gsm-sip-bridge/src/supervise/render.rs
assertion_line: 229
expression: line1
---
#!/bin/sh
NETNS="ims1" STRONGSWAN_TUN_IFACE="tun23-1" exec /etc/strongswan.d/ims.updown "$@"
