gsm-sip-bridge/src/supervise/snapshots/gsm_sip_bridge__supervise__render__tests__vpcd_reader_conf_custom_port_moves_every_slots_channel_id_together.snap
---
source: gsm-sip-bridge/src/supervise/render.rs
assertion_line: 247
expression: rendered
---
FRIENDLYNAME "Virtual PCD"
DEVICENAME   /dev/null:0x4E20
LIBPATH      /usr/lib/pcsc/drivers/serial/libifdvpcd.so
CHANNELID    0x4E20
