gsm-sip-bridge/src/supervise/snapshots/gsm_sip_bridge__supervise__render__tests__vpcd_reader_conf_default_port.snap
---
source: gsm-sip-bridge/src/supervise/render.rs
assertion_line: 241
expression: render_vpcd_reader_conf(15963)
---
FRIENDLYNAME "Virtual PCD"
DEVICENAME   /dev/null:0x3E5B
LIBPATH      /usr/lib/pcsc/drivers/serial/libifdvpcd.so
CHANNELID    0x3E5B
